--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/legacy-factories": "^1.3",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
@@ -29,7 +30,8 @@
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
             "Sadegh\\User\\": "modules/Sadegh/User/",
-            "Sadegh\\Dashboard\\": "modules/Sadegh/Dashboard/"
+            "Sadegh\\Dashboard\\": "modules/Sadegh/Dashboard/",
+            "Sadegh\\Category\\": "modules/Sadegh/Category/"
         }
     },
     "autoload-dev": {
